--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,10 @@
 include: package:flutter_lints/flutter.yaml
 linter:
   rules:
-    
+    avoid_print: false
+    prefer_const_constructors: false
+    use_key_in_widget_constructors: false
+    unnecessary_overrides: false
+    constant_identifier_names: false
+    prefer_const_declarations: false
+    prefer_const_literals_to_create_immutables: false
