--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,9 +3,10 @@ version: 1.0.0+1
 publish_to: none
 description: Aplikaksi rumah sampah by Ilma Faridah Hannun
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: ">=2.19.6 <3.0.0"
 
 dependencies:
+  cached_network_image: ^3.2.3
   cloud_firestore: 4.5.0
   convex_bottom_bar: ^3.2.0
   cupertino_icons: ^1.0.2
@@ -25,6 +26,7 @@ dependencies:
   get: 4.6.5
   http: ^0.13.6
   image_picker: ^0.8.7+5
+  path: ^1.8.2
   searchable_paginated_dropdown: ^1.2.0
   shared_preferences: ^2.1.1
 
