--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,14 +23,22 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.2.19
   flutter_svg: ^2.0.5
+  geocoding: ^2.1.0
+  geolocator: ^9.0.2
   get: 4.6.5
+  google_maps_flutter: ^2.2.8
+  google_maps_place_picker_mb: ^3.0.2
   http: ^0.13.6
   image_picker: ^0.8.7+5
+  intl: ^0.17.0
+  json_serializable: ^6.6.2
   path: ^1.8.2
   searchable_paginated_dropdown: ^1.2.0
   shared_preferences: ^2.1.1
+  url_launcher: ^6.1.11
 
 dev_dependencies:
+  build_runner: ^2.3.3
   flutter_lints: 2.0.1
   flutter_test:
     sdk: flutter
