--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter_map: ^4.0.0
   flutter_native_splash: ^2.2.19
   flutter_svg: ^2.0.5
-  geocoder: ^0.2.1
+  # geocoder: ^0.2.1
   geocoding: ^2.1.0
   geolocator: ^9.0.2
   get: 4.6.5
