--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 
 dependencies:
   cached_network_image: ^3.2.3
+  charts_flutter: ^0.12.0
   cloud_firestore: 4.5.0
   convex_bottom_bar: ^3.2.0
   cupertino_icons: ^1.0.2
